// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Toaster Default 1`] = `
<div
  className="sc-csuQGl bUWxJa"
>
  <div
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <div
      className="sc-ktHwxA eyzkfw"
    >
      <div
        className="sc-bwzfXH cbcpsK"
      >
        <div
          className="sc-cIShpX JlkMn"
        >
          <div
            className="sc-bwzfXH jQmHZh"
          >
            <span
              className="sc-ifAKCX eCQSHy"
            >
              <span
                aria-hidden={true}
                className="sc-iwsKbI jSMqMr"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test-file-stub",
                  }
                }
                role="img"
              />
            </span>
          </div>
          <div
            className="sc-bwzfXH kKctzU"
          >
            <div
              className="sc-bwzfXH gaQYSB"
            >
              <p
                className="sc-bxivhb jKBUfU"
              >
                Thought provoking we must stand.
              </p>
              <p
                className="sc-bxivhb iyjEP"
              >
                Game-changer problem-solvers; state of play invest, synergy uplift we must stand up ideate social intrapreneurship.
              </p>
            </div>
          </div>
          <div
            className="sc-bwzfXH bQfpwP"
          >
            <button
              className="sc-gqjmRU gIKjDZ sc-htoDjs ifkBJX"
              disabled={undefined}
              id={undefined}
              onClick={[Function]}
              title="close"
              type="button"
            >
              <span
                aria-hidden={true}
                className="sc-iwsKbI MOBcS"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test-file-stub",
                  }
                }
                role="img"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toaster With action button 1`] = `
<div
  className="sc-csuQGl bUWxJa"
>
  <div
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <div
      className="sc-ktHwxA eyzkfw"
    >
      <div
        className="sc-bwzfXH cbcpsK"
      >
        <div
          className="sc-cIShpX fXuOPW"
        >
          <div
            className="sc-bwzfXH jQmHZh"
          >
            <span
              className="sc-ifAKCX hbrmCj"
            >
              <span
                aria-hidden={true}
                className="sc-iwsKbI jSMqMr"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test-file-stub",
                  }
                }
                role="img"
              />
            </span>
          </div>
          <div
            className="sc-bwzfXH kKctzU"
          >
            <div
              className="sc-bwzfXH gaQYSB"
            >
              <p
                className="sc-bxivhb jKBUfU"
              >
                Overcome injustice.
              </p>
              <p
                className="sc-bxivhb iyjEP"
              >
                Global low-hanging fruit, collaborative consumption segmentation mobilize support. Problem-solvers cultivate, best practices, shared unit of.
              </p>
            </div>
            <div
              className="sc-bwzfXH kWLDUa"
            >
              <button
                className="sc-VigVT cZkyFH sc-htoDjs ifkBJX"
                disabled={undefined}
                id={undefined}
                onClick={[Function]}
                title="Hello"
                type="button"
              >
                Hello
              </button>
            </div>
          </div>
          <div
            className="sc-bwzfXH bQfpwP"
          >
            <button
              className="sc-gqjmRU gIKjDZ sc-htoDjs ifkBJX"
              disabled={undefined}
              id={undefined}
              onClick={[Function]}
              title="close"
              type="button"
            >
              <span
                aria-hidden={true}
                className="sc-iwsKbI MOBcS"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test-file-stub",
                  }
                }
                role="img"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
